src/objects/APTS_EPIOrderError__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Error_Message__c</fullName>
        <description>This is a message that would be provided for an order from digital that has completed being received by Apttus from EPI. The message will show why the error is coming</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Apttus Order line Item for an order.</description>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>EPI Error Log</relationshipLabel>
        <relationshipName>EPI_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Apttus Order Number. This is the order number that is given to the order.</description>
        <label>Order Number</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>EPI Error Log</relationshipLabel>
        <relationshipName>EPI_Error_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Line_Number__c</fullName>
        <description>The unique identifier for each line item (product) in cart, generated in EPI and from a customer ordering from the web</description>
        <label>Source Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Order_Number__c</fullName>
        <description>The unique identifier of the order generated in EPI. Required in order to trace that the order came from a digital custome that ordered through the Web.</description>
        <label>Source Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <description>This is the status of the order at each stage of processing</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EPI Error Log</label>
    <listViews>
        <fullName>APTS_CS_Queue_APTS_EPIOrderError</fullName>
        <columns>NAME</columns>
        <columns>APTS_Source_Order_Number__c</columns>
        <columns>APTS_Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>CS Queue Test</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>EPI Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EPI Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>